# comet-server

./: .gitignore  .polemarch.yaml  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Client_connection.cpp  Client_connection.h  CometQL.output  CometQL.tab.c  CometQL.tab.h  Dockerfile  Dockerfile-dev  Freeswitch_connection.cpp  Freeswitch_connection.h  MySqlProtocol.h  MySql_connection.cpp  MySql_connection.h  TagLoger.h  TagTimer.cpp  appConf.cpp  appConf.h  backtrace.cpp  base64.h  comet-service.sh  comet-start.sh  comet.conf  comet.ini  comet.service  db.sql  dbLink.h  devManager.cpp  devManager.h  index.php?cultivate=docuWikiToMD.getMd  install-cppcomet.yml  install-mysql.yml  intervalLoop.cpp  lex.yy.c  main.cpp  main.h  (+20 more)
api/: CometServerApi.js  cometVideoApi.js  jssip.js  readme.md
api/telegraf/: telegraf.sh
coverage/: CMakeLists.txt  README.md  cli.txt  cometN1.ini  cometN2.ini  coverage.sh  fulltests.sh  jstestrun.sh  onlyJsTests.sh  package.json  readme.md  run.sh  window-object.js
coverage/test/: simpletest.j--s  simpletest.js
demo/chat-example/: .~lock.scheme of chat.odg#  chat.php  readme.MD  scheme of chat.odg  test.html
dependencies/: build.sh
dependencies/freeswitch-esl/include/: esl_config_auto.h  stamp-h2
dependencies/hashlib2plus/doc/: FAQ.TXT
dependencies/jwt-cpp/: CTestTestfile.cmake  Doxyfile
dependencies/jwt-cpp/src/: JwtConfigVersion.cmake
dependencies/jwt-cpp/test/: CTestTestfile.cmake  Makefile  all_tests  base64_test  claim_validators_factory_test  claim_validators_test  cmake_install.cmake  sample  token_test  validators_factory_test  validators_test
dependencies/jwt-cpp1/: CTestTestfile.cmake  Makefile
dependencies/jwt-cpp1/src/: Makefile
dependencies/jwt-cpp1/test/: CTestTestfile.cmake  Makefile  all_tests  base64_test  claim_validators_factory_test  claim_validators_test  sample  token_test  validators_factory_test  validators_test
doc/: en.rst  partner.rst  prepare.sh  ru.rst
doc/comet/: authentication.rst  building-from-source.rst  chat-with-authorization.rst  cometql-bash-example.rst  cometql.rst  dev_id.rst  introduction-to-comet.rst  javascript_api.rst  load-testing-result.rst  load-testing.rst  simple-chat-example.rst  simple-chat-plugin.rst  star-comet-chat.rst  testhosting.rst
doc/comet/cometql/: error.rst  http.rst  optimization_for_the_cluster.rst
doc/comet/faq/: access-to-channels-for-outsiders.rst  isolation-of-users.rst  js-api-subscription.rst  max-numbers-of-pipes.rst  movement-of-one-variable.rst  public_key.rst  realtime-users-list.rst  send-message-to-pipe.rst  use-php-as-comet-server.rst  websockets-vs-longpolling.rst  what-browsers-are-supported.rst
doc/comet/javascript_api/: error.rst  pipe-types.rst
doc/en/comet/: authentication.rst  building-from-source.rst  cometql-bash-example.rst  cometql.rst  dev_id.rst  introduction-to-comet.rst  javascript_api.rst  load-testing-result.rst  load-testing.rst  simple-php-chat-example.rst  star-comet-chat.rst  testhosting.rst
doc/user/: app.rst
doc/user/app/: modx-messenger.rst  mogutacms.rst
docker/: Dockerfile-debian
docs/: Checking the hosting for possible connect to the comet server.md  README.md  comet.ini.md  index.html  index.md
docs/API/: API video of chats.md  Authorization on the CppComet.md  Connection settings.md  Error codes in CometQL.md  Optimization delete, and insert in CometQL.md  Reserved channel names.md
docs/API/CometQL/: CometQL API.md
docs/API/JavaScript API/: JavaScript API.md
docs/Administration/: Clusterization CppComet.md  Install.md  file comet.ini.md
docs/EN/: An example of sending a message from a bash script.md  CometQL.md  Connection settings.md  Introduction.md  JavaScript API.md  Online CometQL CLI.md  PHP chat example.md  What is “the public developer’s ID” and “the secret developer’s key”?.md
docs/EN/API/: Reserved channel names.md  Users’ authorization on the comet-server.md
docs/EN/Administration/: Install.md
docs/EN/Examples/: PHP chat example.md
docs/EN/load testing/: Report about testing of 64,000 connections online.md
docs/Examples/: An example of sending a message from a bash script.md  PHP chat example.md
docs/HL-tests/HL-test1/: index.html  tsung.xml
docs/Introduction/: Introduction.md  Versions of CppComet.md
docs/RU/: Cpp.Comet - Документация.md  Как реализовать  список посетителей обновляющийся на "лету"?.md  Как сделать чат.md
docs/RU/API/: CometQL API.md  CometQL.md  JavaScript API.md  Авторизация пользователей на комет сервере.md  Авторизация пользователей.md  Коды ошибок в JavaScript API.md  Оптимизации delete и insert в CometQL.md  Параметры для подключения.md  Публичный идентификатор разработчика.md
docs/RU/FIQ/: Вопрос от пользователя.md  Как сделать рассылку уведомления о новом комментарии к новости.md  (+1 more)
docs/dokuwiki/: readme.md
docs/load testing/: Report about testing of 64000 connections online.md
docs/wiki-md/: en.md  faq.md  ru.md
hashlib2plus/doc/: README.TXT
hashlib2plus/src/: hl_md5wrapper.cpp
roles/: readme.md
roles/ansible-limits/: .gitignore  .travis.yml  LICENSE.txt  README.md
roles/ansible-role-highload/: README.md
roles/cppcomet-ansible-role/: README.md
src/: CP.h  Client_connection.cpp  Client_connection.h  CometQL.cc  CometQL.cpp  CometQL.h  CometQL.hh  CometQL.l  CometQL.l--  CometQL.tab.c  CometQL.tab.h  CometQL.y  CometQL.y--  CometQLProxy_connection.cpp  CometQLProxy_connection.h  CometQLcluster.cpp  CometQLcluster.h  Freeswitch_connection.cpp  JwtConfig.cmake  MySqlProtocol.cpp  MySqlProtocol.h  MySql_connection.cpp  MySql_connection.h  TagLoger.cpp  TagLoger.h  TagTimer.cpp  TagTimer.h  appConf.cpp  appConf.h  backtrace.h  base64.cpp  connection.cpp  connection.h  dbLink.cpp  dbLink.h  devManager.cpp  devManager.h  internalApi.cpp  internalApi.h  intervalLoop.cpp  (+20 more)
src/ini_parser/: ini_parser.hpp
test/: tsung.xml
tests/api-tests/: CometServerApi.js  auth.php  conf.php  index.php  readme.md  test.php
tests/scripts/: cluster.sh
tests/tsung-tests/: readme.md  tsung-mysql.xml  tsung.xml
(+201 files in other folders)
